# adaptive-agentic-marketing

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: adaptive_hierarchical.yaml  default.yaml  experiments.yaml
docs/: architecture.md  data_preparation.md  ethics.md  example_adaptive_hierarchical_report.md  experiment_design.md  migration_adaptive_full_to_simple.md
examples/: decide_request.json
scripts/: full_test.sh  start_api.sh
src/: config.py  main.py  schemas.py
src/agentic/: controller.py  ollama_controller.py
src/analysis/: __init__.py  feature_analysis.py
src/api/: app.py
src/content/: generation_module.py
src/data/: coverage.py  feature_builder.py  label_audit.py  prepare.py  synthetic.py
src/eval/: __init__.py  calibration_plots.py  confusion_analysis.py  error_analysis.py
src/evaluation/: metrics.py  report.py
src/explanations/: explanation_module.py
src/features/: label_engineering.py
src/models/: calibration.py  ood.py  ppo_policy.py  stage_a_binary.py  stage_b_action.py  xgboost_module.py
src/pipeline/: run_experiment.py
src/policy/: controller.py  guardrails.py  rules_engine.py
src/report/: report_generator.py
src/rl/: __init__.py  action_mapping.py  buffer.py  distributions.py  environment.py  evaluate_ppo.py  gae.py  networks.py  ppo.py  reward.py  state.py  state_encoder.py  train_ppo.py  transition.py  types.py
src/training/: train_xgboost.py
src/utils/: logging_utils.py
tests/integration/: test_api.py  test_full_test_orchestration.py  (+2 more)
(+17 files in other folders)
