[project]
name = "adaptive-agentic-marketing"
version = "0.1.0"
description = "Adaptive agentic framework for responsible personalized marketing"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "matplotlib>=3.9",
  "jinja2>=3.1",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
